--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   easy_splash_screen: ^1.0.4
   cached_network_image: 
   animated_bottom_navigation_bar: ^1.1.0+1
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: 
+  flutter_faq: ^1.0.1+1
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
