--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   smooth_page_indicator: 
   flutter_faq: ^1.0.1+1
   expandable: ^5.0.1
+  clay_containers: ^0.3.2
+  rflutter_alert: ^2.0.4
+  flutter_switch: ^0.3.2
+  animated_theme_switcher:
 
 dev_dependencies:
   flutter_test:
