--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   google_fonts: ^4.0.1
   introduction_screen: ^3.1.4
   overlay_support: 
-  flutter_login: ^4.1.1
   flutter_launcher_icons: ^0.11.0
   font_awesome_flutter: ^10.0.0
   easy_splash_screen: ^1.0.4
@@ -59,6 +58,7 @@ dependencies:
   flutter_feather_icons: ^2.0.0+1
   gender_picker: ^1.1.0
   flutter_otp_text_field: ^1.1.1
+  data_table_2: ^2.3.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
