--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  badges: ^2.0.2
+  icon_badge: ^1.0.0
   bloc: any
   flutter_bloc: ^8.1.1
   shared_preferences: ^2.0.17
@@ -59,6 +61,10 @@ dependencies:
   gender_picker: ^1.1.0
   flutter_otp_text_field: ^1.1.1
   data_table_2: ^2.3.12
+  geolocator: 
+  place_picker: 
+  flutter_svg:
+  google_maps_flutter: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
